--- a/Ch02.md
+++ b/Ch02.md
@@ -234,6 +234,116 @@ public class DesignTacoController {
 
 ### 3 模板视图设计
 
+类似 `home.html`，本节需要创建一个 `Taco` 设计页的模板视图，并利用 `Thymeleaf` 语法渲染 `Controller` 转发的数据。
+
+首先创建模板文件 `/resources/templates/design.html`：
+
+```html
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <title>Taco Cloud</title>
+        <link rel="stylesheet" th:href="@{/styles.css}" />
+    </head>
+    <body>
+        <h1>Design your taco!</h1>
+        <img th:src="@{/images/TacoCloud.png}"/>
+        <form method="POST" th:object="${taco}">
+            <div class="grid">
+                <div class="ingredient-group" id="wraps">
+                    <h3>Designate your wrap:</h3>
+                    <div th:each="ingredient : ${wrap}">
+                        <input th:field="*{ingredients}" type="checkbox" 
+                               th:value="${ingredient.id}"/>
+                        <span th:text="${ingredient.name}">INGREDIENT</span><br/>
+                    </div>
+                </div>
+                <div class="ingredient-group" id="proteins">
+                    <h3>Pick your protein:</h3>
+                    <div th:each="ingredient : ${protein}">
+                        <input th:field="*{ingredients}" type="checkbox" 
+                               th:value="${ingredient.id}"/>
+                        <span th:text="${ingredient.name}">INGREDIENT</span><br/>
+                    </div>
+                </div>
+                <div class="ingredient-group" id="cheeses">
+                    <h3>Choose your cheese:</h3>
+                    <div th:each="ingredient : ${cheese}">
+                        <input th:field="*{ingredients}" type="checkbox" 
+                               th:value="${ingredient.id}"/>
+                        <span th:text="${ingredient.name}">INGREDIENT</span><br/>
+                    </div>
+                </div>
+                <div class="ingredient-group" id="veggies">
+                    <h3>Determine your veggies:</h3>
+                    <div th:each="ingredient : ${veggies}">
+                        <input th:field="*{ingredients}" type="checkbox" 
+                               th:value="${ingredient.id}"/>
+                        <span th:text="${ingredient.name}">INGREDIENT</span><br/>
+                    </div>
+                </div>
+                <div class="ingredient-group" id="sauces">
+                    <h3>Select your sauce:</h3>
+                    <div th:each="ingredient : ${sauce}">
+                        <input th:field="*{ingredients}" type="checkbox" 
+                               th:value="${ingredient.id}"/>
+                        <span th:text="${ingredient.name}">INGREDIENT</span><br/>
+                    </div>
+                </div>
+            </div>
+            <div>
+                <h3>Name your taco creation:</h3>
+                <input type="text" th:field="*{name}"/><br/>
+                <button>Submit Your Taco</button>
+            </div>
+        </form>
+    </body>
+</html>
+```
+
+注意 `Thymeleaf` 的几个特殊写法：
+
+- `@{}`：创建一个临时的上下文，指定相对路径，从 `/static/` 开始；
+- `${}`：指定一个对象的引用；
+- `*{}`：将括号内的内容作为字符串原样输出；
+- `th:each="ingredient : ${wrap}"`：类似 `JSP` 中的遍历标签，对集合 `wrap` 进行遍历，当前循环变量为 `ingredient`；
+
+再到官方代码库补充样式文件 `/static/styles.css`：
+
+```css
+div.ingredient-group:nth-child(odd) {
+	float: left;
+	padding-right: 20px;
+}
+div.ingredient-group:nth-child(even) {
+    float: left;
+	padding-right: 0;
+}
+div.ingredient-group {
+	width: 50%;
+}
+.grid:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+*, *:after, *:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+span.validationError {
+	color: red;
+}
+```
+
+最后运行项目：（<kbd>Shift</kbd> + <kbd>F9</kbd>，然后在浏览器访问：http://localhost:8080/design）
+
+![after adding design view](assets/2-04.png)
+
+注意到末尾的提交按钮，由于没有创建表单提交逻辑，直接点击会报错。提交逻辑在下一节引入。
+
 
 
 ## 2.2 处理表单提交
