--- a/Ch02.md
+++ b/Ch02.md
@@ -524,7 +524,322 @@ public String processOrder(TacoOrder order,
 
 
 
-## 2.3 验证表单输入
+## 2.3 校验表单输入
+
+传统校验：逐一通过 `if-else` 判定。缺点：书写麻烦、可读性差、难以调试。
+
+`Spring` 支持 `Java's Bean Validation API`（也称为 [JSR-303](https://jcp.org/en/jsr/detail?id=303)）。这使得声明验证规则更优于在代码中显式编写校验逻辑。
+
+具体有四步：
+
+1. 添加 `Spring Validation starter` 依赖；
+2. 在实体类上（如 `Taco`）声明校验规则；
+3. 在 `Controller` 方法上启用校验（即添加注解启用校验 `API`）；
+4. 修改表单视图以展示校验失败提示信息。
+
+### 1 添加依赖
+
+使用 `Spring` 向导初始化项目时，可通过 `Spring Boot starter` 向导模块，勾选 `I/O` 大类下的 `Validation` 复选框。
+
+手动添加到 `pom.xml`：
+
+```xml
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-validation</artifactId>
+</dependency>
+```
+
+此外，还可以通过 `Gradle` 添加：
+
+```bash
+implementation 'org.springframework.boot:spring-boot-starter-validation'
+```
+
+> **小知识**
+>
+> `Spring Validation starter` 在早期的 `Spring Boot` 版本中被内置到了 `web starter` 依赖。自从 `2.3.0` 版后则需手动引入。
+
+
+
+### 2 声明校验规则
+
+修改 `Taco` 实体：
+
+```java
+package tacos;
+import java.util.List;
+import javax.validation.constraints.NotNull;
+import javax.validation.constraints.Size;
+import lombok.Data;
+
+@Data
+public class Taco {
+    @NotNull
+    @Size(min=5, message="Name must be at least 5 characters long")
+    private String name;
+    @NotNull
+    @Size(min=1, message="You must choose at least 1 ingredient")
+    private List<Ingredient> ingredients;
+}
+```
+
+修改 `TacoOrder` 实体：
+
+```java
+package tacos;
+import javax.validation.constraints.Digits;
+import javax.validation.constraints.NotBlank;
+import javax.validation.constraints.Pattern;
+import org.hibernate.validator.constraints.CreditCardNumber;
+import java.util.List;
+import java.util.ArrayList;
+import lombok.Data;
+
+@Data
+public class TacoOrder {
+
+    @NotBlank(message="Delivery name is required")
+    private String deliveryName;
+
+    @NotBlank(message="Street is required")
+    private String deliveryStreet;
+
+    @NotBlank(message="City is required")
+    private String deliveryCity;
+
+    @NotBlank(message="State is required")
+    private String deliveryState;
+
+    @NotBlank(message="Zip code is required")
+    private String deliveryZip;
+
+    @CreditCardNumber(message="Not a valid credit card number")
+    private String ccNumber;
+
+    @Pattern(regexp="^(0[1-9]|1[0-2])([\\/])([2-9][0-9])$",
+             message="Must be formatted MM/YY")
+    private String ccExpiration;
+
+    @Digits(integer=3, fraction=0, message="Invalid CVV")
+    private String ccCVV;
+
+    private List<Taco> tacos = new ArrayList<>();
+
+    public void addTaco(Taco taco) {
+        this.tacos.add(taco);
+    }
+}
+```
+
+注意：
+
+1. `@Size` 用在 `String` 字段，可限制字符长度；用在 `List` 集合，可限制集合大小；
+2. `@NotNull` 表示字段不为空；而 `@NotBlank` 表示空字符串也不行；
+3. `@CreditCardNumber` 是 `Hibernate` 扩展的校验规则，但也只能从 [算法角度](https://creditcardvalidator.org/articles/luhn-algorithm) 校验，对该卡号是否是有效帐号或是否具备支付能力无法校验；
+4. `@Digits` 可对数字型字段作进一步校验（整数位数、小数位数等）；
+5. 信用卡有效期需要自定义规则，使用 `@Pattern` 注解；
+
+
+
+### 3 修改 `Controller` 方法启用校验 
+
+即在表单绑定时执行验证。修改 `processTaco` 方法如下：
+
+```java
+@PostMapping
+public String processTaco(
+        @Valid Taco taco, Errors errors,
+        @ModelAttribute TacoOrder tacoOrder) {
+
+    if (errors.hasErrors()) {
+        return "design";
+    }
+
+    tacoOrder.addTaco(taco);
+    log.info("Processing taco: {}", taco);
+
+    return "redirect:/orders/current";
+}
+```
+
+修改 `processOrder` 方法如下：
+
+```java
+@PostMapping
+public String processOrder(@Valid TacoOrder order, Errors errors, 
+                           SessionStatus sessionStatus) {
+    if (errors.hasErrors()) {
+        return "orderForm";
+    }
+
+    log.info("Order submitted: {}", order);
+    sessionStatus.setComplete();
+
+    return "redirect:/";
+}
+```
+
+可见，只需对控制器类的方法作两处修改即可：
+
+1. 使用 `@Valid` 注解标识表单实体；
+2. 引入 `Errors` 对象，用于执行校验失败时的处理逻辑（本例为阻止跳转，即回到发起请求页面）；
+
+
+
+### 4 修改视图，展示校验失败提示
+
+`Thymeleaf` 在视图层提供了 `th:errors` 标签属性展示校验失败信息，需作如下修改：
+
+```html
+<label for="ccNumber">Credit Card #: </label>
+<input type="text" th:field="*{ccNumber}"/>
+<span class="validationError"
+      th:if="${#fields.hasErrors('ccNumber')}"
+      th:errors="*{ccNumber}">CC Num Error</span>
+```
+
+其中：
+
+- `validationError` 用于自定义样式（本例设置为红色字体）；
+- `th:if` 及 `#fields.hasErrors` 方法用于判定是否校验失败；
+- `th:errors` 用于展示校验失败时的提示信息；
+- `th:errors="*{deliveryCity}"`：表示校验失败时，报错提示信息会默认放到该字段供视图模板调用（`deliveryCity`）；
+
+修改 `design.html`：
+
+```html
+<span class="validationError" th:if="${#fields.hasErrors('ingredients')}" th:errors="*{ingredients}">Ingredient Error</span>
+<span class="validationError" th:if="${#fields.hasErrors('name')}" th:errors="*{name}">Name Error</span>
+```
+
+修改 `orderForm.html`：
+
+```html
+<!-- tag::allButValidation[] -->
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <title>Taco Cloud</title>
+        <link rel="stylesheet" th:href="@{/styles.css}" />
+    </head>
+
+    <body>
+
+        <form method="POST" th:action="@{/orders}" th:object="${tacoOrder}">
+            <h1>Order your taco creations!</h1>
+
+            <img th:src="@{/images/TacoCloud.png}"/>
+
+            <h3>Your tacos in this order:</h3>
+            <a th:href="@{/design}" id="another">Design another taco</a><br/>
+            <ul>
+                <li th:each="taco : ${tacoOrder.tacos}">
+                    <span th:text="${taco.name}">taco name</span></li>
+            </ul>
+
+            <!-- end::allButValidation[] -->
+            <div th:if="${#fields.hasErrors()}">
+                <span class="validationError">
+                    Please correct the problems below and resubmit.
+                </span>
+            </div>
+
+            <!-- tag::allButValidation[] -->
+            <h3>Deliver my taco masterpieces to...</h3>
+            <label for="deliveryName">Name: </label>
+            <input type="text" th:field="*{deliveryName}"/>
+            <!-- end::allButValidation[] -->
+            <span class="validationError"
+                  th:if="${#fields.hasErrors('deliveryName')}"
+                  th:errors="*{deliveryName}">Name Error</span>
+            <!-- tag::allButValidation[] -->
+            <br/>
+
+            <label for="deliveryStreet">Street address: </label>
+            <input type="text" th:field="*{deliveryStreet}"/>
+            <!-- end::allButValidation[] -->
+            <span class="validationError"
+                  th:if="${#fields.hasErrors('deliveryStreet')}"
+                  th:errors="*{deliveryStreet}">Street Error</span>
+            <!-- tag::allButValidation[] -->
+            <br/>
+
+            <label for="deliveryCity">City: </label>
+            <input type="text" th:field="*{deliveryCity}"/>
+            <!-- end::allButValidation[] -->
+            <span class="validationError"
+                  th:if="${#fields.hasErrors('deliveryCity')}"
+                  th:errors="*{deliveryCity}">City Error</span>
+            <!-- tag::allButValidation[] -->
+            <br/>
+
+            <label for="deliveryState">State: </label>
+            <input type="text" th:field="*{deliveryState}"/>
+            <!-- end::allButValidation[] -->
+            <span class="validationError"
+                  th:if="${#fields.hasErrors('deliveryState')}"
+                  th:errors="*{deliveryState}">State Error</span>
+            <!-- tag::allButValidation[] -->
+            <br/>
+
+            <label for="deliveryZip">Zip code: </label>
+            <input type="text" th:field="*{deliveryZip}"/>
+            <!-- end::allButValidation[] -->
+            <span class="validationError"
+                  th:if="${#fields.hasErrors('deliveryZip')}"
+                  th:errors="*{deliveryZip}">Zip Error</span>
+            <!-- tag::allButValidation[] -->
+            <br/>
+
+            <h3>Here's how I'll pay...</h3>
+            <!-- tag::validatedField[] -->
+            <label for="ccNumber">Credit Card #: </label>
+            <input type="text" th:field="*{ccNumber}"/>
+            <!-- end::allButValidation[] -->
+            <span class="validationError"
+                  th:if="${#fields.hasErrors('ccNumber')}"
+                  th:errors="*{ccNumber}">CC Num Error</span>
+            <!-- tag::allButValidation[] -->
+            <!-- end::validatedField[] -->
+            <br/>
+
+            <label for="ccExpiration">Expiration: </label>
+            <input type="text" th:field="*{ccExpiration}"/>
+            <!-- end::allButValidation[] -->
+            <span class="validationError"
+                  th:if="${#fields.hasErrors('ccExpiration')}"
+                  th:errors="*{ccExpiration}">CC Num Error</span>
+            <!-- tag::allButValidation[] -->
+            <br/>
+
+            <label for="ccCVV">CVV: </label>
+            <input type="text" th:field="*{ccCVV}"/>
+            <!-- end::allButValidation[] -->
+            <span class="validationError"
+                  th:if="${#fields.hasErrors('ccCVV')}"
+                  th:errors="*{ccCVV}">CC Num Error</span>
+            <!-- tag::allButValidation[] -->
+            <br/>
+
+            <input type="submit" value="Submit Order"/>
+        </form>
+    </body>
+</html>
+<!-- end::allButValidation[] -->
+
+```
+
+实测效果：
+
+`Taco` 设计页：（成功）
+
+![validating design page](assets/2-06.png)
+
+订单页校验实测：（成功）
+
+![validating orderForm page](assets/2-07.png)
 
 
 
