Update notes to S2.4-Working with view controllers

--- a/Ch02.md
+++ b/Ch02.md
@@ -845,6 +845,63 @@ public String processOrder(@Valid TacoOrder order, Errors errors,
 
 ## 2.4 使用视图控制器
 
+对于像 `HomeController` 那样没有 `model` 实体或表单输入的控制器类，`Spring` 还提供了另一种专门的 **视图控制器**（`view controller`）来规范并简化这类控制器类的管理。只需在配置类上实现 `WebMvcConfigurer` 接口的 `addViewControllers` 方法即可。
+
+新增配置类 `WebConfig`：（同时删除 `HomeController`）
+
+```java
+package tacos.web;
+
+import org.springframework.context.annotation.Configuration;
+import org.springframework.web.servlet.config.annotation.ViewControllerRegistry;
+import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
+
+@Configuration
+public class WebConfig implements WebMvcConfigurer {
+    @Override
+    public void addViewControllers(ViewControllerRegistry registry) {
+        registry.addViewController("/").setViewName("home");
+    }
+}
+```
+
+同时，之前引用了 `HomeController` 的测试类 `HomeControllerTest` 也要删除相关引用：（即删除 `@WebMvcTest` 注解中的 `class` 类引用）
+
+```java
+package tacos;
+// ...
+@WebMvcTest
+public class HomeControllerTest {
+    @Autowired
+    private MockMvc mockMvc;
+    @Test
+    public void testHomePage() throws Exception {
+        mockMvc.perform(get("/"))
+                .andExpect(status().isOk())
+                .andExpect(view().name("home"))
+                .andExpect(content().string(
+                        containsString("Welcome to...")));
+    }
+}
+```
+
+除了单独定义一个配置类实现 `WebMvcConfigurer` 接口并重载 `addViewControllers` 方法外，任何实现了 `WebMvcConfigurer` 接口的类都能实现相同效果，比如在启动类上：
+
+```java
+@SpringBootApplication
+public class TacoCloudApplication implements WebMvcConfigurer {
+    public static void main(String[] args) {
+        SpringApplication.run(TacoCloudApplication.class, args);
+    }
+    @Override
+    public void addViewControllers(ViewControllerRegistry registry) {
+        registry.addViewController("/").setViewName("home");
+    }
+}
+```
+
+虽然功能相同，但从单一职责的角度和可扩展性评估，该方案并不推荐；最好还是定义单独的配置类，以便统一管理。
+
 
 
 ## 2.5 视图模板库选择
