Update notes to S2.5-Choosing template lib (end for Ch02)

--- a/Ch02.md
+++ b/Ch02.md
@@ -906,6 +906,56 @@ public class TacoCloudApplication implements WebMvcConfigurer {
 
 ## 2.5 视图模板库选择
 
+`Spring` 支持的模板引擎：
+
+| 模板 | Spring Boot starter 依赖 |
+| :--: | :--: |
+| `FreeMarker` | `spring-boot-starter-freemarker` |
+| `Groovy Templates` | `spring-boot-starter-groovy-templates` |
+| JavaServer Page （`JSP`） | None （provided by `Tomcat` or `Jetty`） |
+| `Mustache` | `spring-boot-starter-mustache` |
+| `Thymeleaf` | `spring-boot-starter-thymeleaf` |
+
+通常情况下，在 `pom.xml` 添加对应的模板引擎依赖后，就可以在 `/src/main/resources/templates/` 下创建模板文件了。
+
+如果选择的是 `JSP` 渲染页面，会遇到一个问题。事实证明，`Java servlet` 容器 —— 包括嵌入式 `Tomcat` 和 `Jetty` 容器 —— 通常在 `/WEB-INF` 下检索 `jsp` 文件。此时若项目构建为一个可执行的 `JAR` 文件，则无法满足该需求，除非按 `WAR` 文件打包构建；若按 JAR 文件构建项目，则模板引擎只能选择 `Thymeleaf`、`FreeMarker` 或表中的其他选项。
+
+
+
+### 模板缓存的问题
+
+默认情况下，模板只在首次使用时解析一次，解析结果被缓存以供后续使用。对于生产环境来说，这是一个很好的特性，因为它可以防止冗余的模板解析，从而提高性能。但在开发阶段则往往需要实时解析最新的模板，否则每次只能手动重启项目，非常不方便。
+
+禁用模板缓存有两种方式：
+
+1. 修改对应模板的缓存配置项，设为 `false` 即可；
+2. 借助 `DevTools` 依赖，并在构建项目时排除该依赖（详见第 1 章笔记 1.3 小节配置 `IDEA` 使 `DevTools` 自动刷新生效的相关内容）。
+
+基于模板引擎的缓存配置项总结如下：
+
+| 模板引擎 | 缓存配置项 |
+| :--: | :--: |
+| `Freemarker` | `spring.freemarker.cache` |
+| `Groovy Templates` | `spring.groovy.template.cache` |
+| `Mustache` | `spring.mustache.cache` |
+| `Thymeleaf` | `spring.thymeleaf.cache` |
+
+具体用法：在项目配置文件中新增禁用模板缓存的配置：（如 `application.properties` 文件）
+
+```properties
+# Disable Thymeleaf template cache
+spring.thymeleaf.cache=false
+```
+
+推荐使用 `DevTools` 依赖（不用根据环境切换配置文件）
+
 
 
 ## 小结
+
+* `Spring` 提供了一个强大的 `Web` 框架 —— `Spring MVC`，可以用于开发 `Spring` 应用程序的 `Web` 前端；
+* `Spring MVC` 是基于注解的，可使用 `@RequestMapping`、`@GetMapping` 和 `@PostMapping` 等注解来声明请求处理方法；
+* 大多数请求逻辑以返回一个逻辑视图名称收尾，例如一个 `Thymeleaf` 模板，请求（以及任何 `model` 数据）被转发到该模板；
+* `Spring MVC` 通过 `Java Bean Validation API` 和 `Hibernate Validator` 等校验 `API` 的实现来支持表单校验；
+* 视图控制器可以用来处理不需要模型数据或处理的 `HTTP GET` 请求；
+* 除了 `Thymeleaf`，`Spring` 还支持多种模板引擎，如 `FreeMarker`、`Groovy Templates` 及 `Mustache`。
