--- a/Ch03.md
+++ b/Ch03.md
@@ -8,13 +8,13 @@
 - 创建 `Spring Data JDBC Repository`
 - 使用 `Spring Data` 声明 `JPA Repository`
 
-本章从传统 `JDBC` 代码入手，依次介绍 `JdbcTemplate`、`Spring Data JDBC` 及 `Spring Data JPA` 在数据持久化方面对简化代码和提升代码质量方面所做的努力。
+本章从传统 `JDBC` 代码入手，依次介绍 `JdbcTemplate`、`Spring Data JDBC` 及 `Spring Data JPA` 如何持久化数据。
 
 ---
 
 
 
-3.1 使用 `JDBC` 读写数据
+## 3.1 使用 `JDBC` 读写数据
 
 关系型数据库的地位目前仍无法被撼动。`Spring` 常用的两种数据持久化方式：`Spring JDBC` 与 `Spring JPA`。而 `Spring JDBC` 是对 `JdbcTemplate` 类的进一步强化。本小节先示例 `JdbcTemplate` 的用法，后续两节分别介绍 `Spring Data JDBC` 与 `Spring Data JPA`。
 
@@ -81,7 +81,7 @@ public Optional<Ingredient> findById(String id) {
         id);
     return results.size() == 0 ?
         Optional.empty() :
-    Optional.of(results.get(0));
+        Optional.of(results.get(0));
 }
 private Ingredient mapRowToIngredient(ResultSet row, int rowNum)
     throws SQLException {
@@ -418,9 +418,185 @@ public class IngredientByIdConverter implements Converter<String, Ingredient> {
 
 ---
 
+
+
 ### 4 定义 JDBC 存储库（repositories）——订单及菜谱信息
 
+接着加大难度，实现 `TacoOrder` 和 `Taco` 的持久化逻辑。`Taco` 依赖于 `TacoOrder`，因此入库 `TacoOrder` 必须入库对应的一个或多个 `Taco`；入库某个 `Taco` 时，还得同时入库该 `Taco` 关联的一个 **配料组合**，即一个 `Taco` 主键对应多个 `Ingredient` 主键，每个配对即为中间表的一个记录。根据上一节定义的 `Ingredient_Ref` 中间表结构，该表共三个字段——
 
+- `ingredient`：外键，关联配料表 `Ingredient` 的主键ID；
+- `taco_order`：定制菜谱时的配料先后顺序；
+- `taco`：存放 `Taco` 对象的主键；
+
+首先新增订单存储库接口 `OrderRepository.java`：
+
+```java
+package tacos.data;
+import java.util.Optional;
+import tacos.TacoOrder;
+public interface OrderRepository {
+    TacoOrder save(TacoOrder order);
+}
+```
+
+接着创建订单接口实现类 `JdbcOrderRepository`：
+
+```java
+package tacos.data;
+@Repository
+public class JdbcOrderRepository implements OrderRepository {
+    private JdbcOperations jdbcOperations;
+    public JdbcOrderRepository(JdbcOperations jdbcOperations) {
+        this.jdbcOperations = jdbcOperations;
+    }
+
+    @Override
+    @Transactional
+    public TacoOrder save(TacoOrder order) {
+        PreparedStatementCreatorFactory pscf =
+            new PreparedStatementCreatorFactory(
+            "insert into Taco_Order "
+            + "(delivery_name, delivery_street, delivery_city, "
+            + "delivery_state, delivery_zip, cc_number, "
+            + "cc_expiration, cc_cvv, placed_at) "
+            + "values (?,?,?,?,?,?,?,?,?)",
+            Types.VARCHAR, Types.VARCHAR, Types.VARCHAR,
+            Types.VARCHAR, Types.VARCHAR, Types.VARCHAR,
+            Types.VARCHAR, Types.VARCHAR, Types.TIMESTAMP
+        );
+        pscf.setReturnGeneratedKeys(true);
+
+        order.setPlacedAt(new Date());
+        PreparedStatementCreator psc =
+            pscf.newPreparedStatementCreator(
+            Arrays.asList(
+                order.getDeliveryName(),
+                order.getDeliveryStreet(),
+                order.getDeliveryCity(),
+                order.getDeliveryState(),
+                order.getDeliveryZip(),
+                order.getCcNumber(),
+                order.getCcExpiration(),
+                order.getCcCVV(),
+                order.getPlacedAt()));
+
+        GeneratedKeyHolder keyHolder = new GeneratedKeyHolder();
+        jdbcOperations.update(psc, keyHolder);
+        long orderId = keyHolder.getKey().longValue();
+        order.setId(orderId);
+
+        List<Taco> tacos = order.getTacos();
+        int i=0;
+        for (Taco taco : tacos) {
+            saveTaco(orderId, i++, taco);
+        }
+
+        return order;
+    }
+}
+```
+
+注意，由于需要拿到实时入库的订单主键 `ID`，需借助 `jdbcOperations` 和 `PreparedStatementCreatorFactory` 以及 `GeneratedKeyHolder`。
+
+第 47 行可效仿订单的实现：
+
+```java
+private long saveTaco(Long orderId, int orderKey, Taco taco) {
+    taco.setCreatedAt(new Date());
+    PreparedStatementCreatorFactory pscf =
+        new PreparedStatementCreatorFactory(
+        "insert into Taco "
+        + "(name, created_at, taco_order, taco_order_key) "
+        + "values (?, ?, ?, ?)",
+        Types.VARCHAR, Types.TIMESTAMP, Type.LONG, Type.LONG
+    );
+    pscf.setReturnGeneratedKeys(true);
+
+    PreparedStatementCreator psc =
+        pscf.newPreparedStatementCreator(
+        Arrays.asList(
+            taco.getName(),
+            taco.getCreatedAt(),
+            orderId,
+            orderKey));
+
+    GeneratedKeyHolder keyHolder = new GeneratedKeyHolder();
+    jdbcOperations.update(psc, keyHolder);
+    long tacoId = keyHolder.getKey().longValue();
+    taco.setId(tacoId);
+
+    saveIngredientRefs(tacoId, taco.getIngredients());
+
+    return tacoId;
+}
+```
+
+第 25 行的 `saveIngredientRefs` 同理：
+
+```java
+private void saveIngredientRefs(
+    long tacoId, List<IngredientRef> ingredientRefs) {
+    int key = 0;
+    for (IngredientRef ingredientRef : ingredientRefs) {
+        jdbcOperations.update(
+            "insert into Ingredient_Ref (ingredient, taco, taco_key) "
+            + "values (?, ?, ?)",
+            ingredientRef.getIngredient(), tacoId, key++);
+    }
+}
+```
+
+实测时发现，`saveIngredientRefs` 方法签名的第二个参数的类型为 `List<IngredientRef>`；而之前定义的 `taco.getIngredients()` 的类型为 `List<Ingredient>`。究其原因，是作者省略了必要的说明。在之前讨论 `Taco` 与 `Ingredient` 的关系时已经明确：
+
+- `Taco` 依赖 `TacoOrder`：体现在 **定制套餐** 不能脱离一个具体的 **订单**；
+- `Ingredient` 不依赖 `Taco`：即便没有 **定制套餐**，各种 **配料** 依然可以存在；
+- `IngredientRef` 依赖 `Taco`：体现在 **定制套餐** 必定对应一个 **配料组合**，而 **配料组合** 与 **配料** 才是上文提到的汇聚关系；
+
+加之 `saveIngredientRefs` 的实现逻辑中，配料组合的元素项 `IngredientRef` 只需要提供配料 ID 即可，其余两个字段均可从其他途径获取。因此，配料组合的元素实体只需要一个成员变量来表征 **配料 ID** 即可：
+
+```java
+package tacos;
+import lombok.Data;
+@Data
+public class IngredientRef {
+    private final String ingredient;
+}
+```
+
+至此，可以将订单 `Controller` 改造为通过 `OrderRepository` 入库：（注意 `orderRepo` 的装载逻辑及第 16 行的引用）
+
+```java
+package tacos.web;
+@Controller
+@RequestMapping("/orders")
+@SessionAttributes("tacoOrder")
+public class OrderController {
+    private OrderRepository orderRepo;
+    public OrderController(OrderRepository orderRepo) {
+        this.orderRepo = orderRepo;
+    }
+    // ...
+    @PostMapping
+    public String processOrder(@Valid TacoOrder order, Errors errors, SessionStatus sessionStatus) {
+        if (errors.hasErrors()) {
+            return "orderForm";
+        }
+        orderRepo.save(order);
+        sessionStatus.setComplete();
+        return "redirect:/";
+    }
+}
+```
+
+实测效果：
+
+订单表：（入库两条）
+
+![jdbcTemplate order info](assets/3-06.png)
+
+套餐表：
+
+![jdbcTemplate taco info](assets/3-07.png)
 
 
 
