DIY测试分支no-ingredient-ref，舍弃 IngredientRef 实体成功

--- a/Ch03.md
+++ b/Ch03.md
@@ -594,13 +594,75 @@ public class OrderController {
 
 ![jdbcTemplate order info](assets/3-06.png)
 
-套餐表：
+套餐表：（订单 ID 作外键）
 
 ![jdbcTemplate taco info](assets/3-07.png)
 
 
 
+> **拓展**
+>
+> 本节内容作者没有叙述清楚，存在几个疑点：
+>
+> - `Taco` 的 `ingredients` 属性为何要变更类型？
+> - `IngredientRef` 实体为何明明有三个表字段，却只声明一个成员变量 `ingredient`？
+>
+> 按照之前的思路也无可厚非，因此决定另起分支，沿用之前的版本实测。
+>
+> 首先将 `Taco` 类改回 `List<Ingredient>` 型：
+>
+> ```java
+> @Data
+> public class Taco {
+>     private Long id;
+>     private Date createAt = new Date();
+>     @NotNull
+>     @Size(min = 5, message = "Name must be at least 5 characters long")
+>     private String name;
+> 
+>     @Size(min = 1, message = "You must choose at least 1 ingredient")
+>     private List<Ingredient> ingredients;
+> }
+> ```
+>
+> 再修改 `JdbcOrderRepository` 持久化 `Ingredient` 集合的逻辑：
+>
+> ```java
+> private void saveIngredientRefs(long tacoId, List<Ingredient> ingredients) {
+>     int key = 0;
+>     for (Ingredient ingredient : ingredients) {
+>         jdbcOperations.update(
+>             "insert into Ingredient_Ref (ingredient, taco, taco_key) values (?, ?, ?)",
+>             ingredient.getId(), tacoId, key++);
+>     }
+> }
+> ```
+>
+> 然后删除 `Ingredient_Ref` 实体。
+>
+> 最后实测：（新增一个订单，包含两个定制 `taco` 套餐）
+>
+> 第一份 `taco`：
+>
+> ![new branch test1](assets/3-08.png)
+>
+> 第二份 `taco`：
+>
+> ![new branch test2](assets/3-09.png)
+>
+> 提交订单 `tacoOrder`：
+>
+> ![new branch test3](assets/3-10.png)
+>
+> `H2` 数据库入库情况：
+>
+> ![new branch test4](assets/3-11.png)
+
+
+
 ## 3.2 使用 `Spring Data JDBC`
+
+
 
 
 
